# SilkyArcTool-rs

./: Cargo.toml  README.md
.github/workflows/: test.yaml
src/: cli.rs  error.rs  lib.rs  main.rs
test_assets/: test.arc
tests/: intergration_test.rs
