[package]
authors     = ["AbsoluteX <lxl66566@gmail.com>"]
description = "A command line tool for packing/unpacking Silky Engine archives"
edition     = "2024"
name        = "silky-arc-tool"
version     = "0.2.1"

[dependencies]
byteorder         = "1.5"
clap              = { version = "4.5", features = ["derive"] }
encoding_rs       = "0.8"
log               = "0.4.28"
lzss              = "0.9"
path-absolutize   = "3.1.1"
pretty_env_logger = "0.5.0"
rayon             = "1.10"
tap               = "1.0.1"
thiserror         = "2.0"
walkdir           = "2.5"

[dev-dependencies]
tempfile = "3.21"

[[bin]]
name = "silkyarctool"
path = "src/main.rs"
